# learnOpencv

./: .gitignore  CMakeLists.txt  run.sh
cvtest/: cornerHarris_demo.h  cvtest.pro  houghlines.cpp  houghlines.h  main.cpp  trackbar_test.cpp  trackbar_test.h
include/: harris_detector.h
src/: CMakeLists.txt  harris_corners.cc  harris_detector.cc  main.cpp  trackbar_test.cpp
src_opencv2/: CMakeLists.txt  cornerHarris_demo.cpp
